stylesheet.less
/* ... */
/* ===============================
   MENU SECTIONS NAVIGATION
   =============================== */

.widget {
    &.menusections {
        text-align: center;
        width: 100%;
        @media @tablet {
            margin: 0 auto 1em;
        }
        ul {
            display: inline-block;
            list-style: none;
            margin-bottom: 0;
            padding-left: 0;
            @media @tablet {
                /* Hidden until nav icon is clicked */
                display: none;
                /* Then these styles are applied */
                width: 100%;
                margin: 20px 0;
                background-color: @color-swatch1;
            }
            li {
                padding: 0 12px;
                margin: 0;
                float: left;
                @media @tablet {
                    width: 100%;
                    padding: 1em 0;
                    margin: 0;
                    border-bottom: 1px dotted lighten(@color-swatch6,50%);
                }
                &:first-child {
                    padding: 0 12px 0 0;
                    @media @tablet {
                        padding: 1em 0;
                    }
                }
                &:last-child {
                    padding: 0 0 0 12px;
                   @media @tablet {
                        border-bottom: 1px dotted @color-swatch6;
                        padding: 1em 0;
                   }
                }
                a {
                    display: block;
                    font-family:@font-swatch6-font-family;
                    font-size:@font-swatch6-font-size;
                    font-weight: @font-swatch6-font-weight;
                    color: lighten(@font-swatch6-color,40%);
                    line-height:@font-swatch6-line-height;
                    letter-spacing: @font-swatch6-letter-spacing;
                    text-decoration: none;
                    &:hover {
                        color: @font-swatch6-color-hover;
                        text-decoration: underline;
                    }
                    &:after {
                        font-size: 0.8em;
                        padding-left: 8px;
                        position: absolute;
                        bottom: 0.4em;
                        color: @color-swatch5;
                    }
                }
                &:last-child a:after {
                    content: "";
                }
            }
        }
        a.menu-pull {
            display: none;
            @media @tablet {
                display: block;
                position: absolute;
                width: 100%;
                border-bottom: 1px dotted @color-swatch5;
                top: 0;
                &:after {
                    content:"";
                    background: image('/images/nav-icon.png') no-repeat;
                    background-position: center;
                    width: 50px;
                    height: 50px;
                    top: -28px;
                    right: 0;
                    left: 0;
                    margin: 0 auto;
                    background-color: @color-swatch5;
                    display: inline-block;
                    position: absolute;
                    border: none;
                    -webkit-border-radius: 100px;
                    -moz-border-radius: 100px;
                    border-radius: 100px;
                }
            }
        }
    }
}
/* ... */

